<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
                android:layout_height="match_parent" xmlns:tools="http://schemas.android.com/tools"
                android:background="#F8FBFF"
                tools:context=".MainActivity">

    <RelativeLayout
            android:id="@+id/header2"
            android:background="@drawable/home_header"
            android:layout_width="match_parent"
            android:layout_height="95dp" android:layout_alignParentStart="true"
            android:layout_alignParentTop="true" android:paddingStart="20dp" android:paddingEnd="20dp"
            android:paddingTop="10dp">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true" android:layout_marginTop="27dp"
                android:id="@+id/textView7" android:text="@string/user" android:textColor="#fff"
                android:textSize="20sp" android:fontFamily="@font/rubik"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/task_Num1" android:text="@string/todayTask" android:textColor="#fff"
                android:textSize="13sp" android:fontFamily="@font/rubik"
                android:layout_alignStart="@+id/textView7"
                android:layout_below="@+id/textView7"/>

        <ImageView
                android:contentDescription="@string/app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" app:srcCompat="@drawable/photo"
                android:id="@+id/imageView3" android:layout_alignParentEnd="true"
                android:layout_alignTop="@+id/textView7"/>
    </RelativeLayout>
    <ImageView
            android:contentDescription="@string/image_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@drawable/clipboard_empty"
            android:layout_centerInParent="true" android:id="@+id/imageView4"/>
    <TextView
            android:text="@string/notask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            android:fontFamily="@font/exo_regular" android:textSize="19sp"
            android:textColor="#565578" android:textStyle="bold" android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true" android:layout_marginBottom="157dp"/>
    <TextView
            android:text="@string/emptytask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4"
            android:textAlignment="center"
            android:fontFamily="@font/exo_light"
            android:textSize="17sp" android:layout_centerHorizontal="true" android:layout_alignParentBottom="true"
            android:layout_marginBottom="123dp"/>
</RelativeLayout>