<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
                android:layout_height="match_parent" xmlns:tools="http://schemas.android.com/tools"
                android:background="#F8FBFF"
                tools:context=".MainActivity">
    <RelativeLayout
            android:id="@+id/header1"
            android:background="@drawable/home_header"
            android:layout_width="match_parent"
            android:layout_height="185dp" android:layout_alignParentStart="true"
            android:layout_alignParentTop="true" android:paddingStart="20dp" android:paddingEnd="20dp"
            android:paddingTop="10dp">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true" android:layout_marginTop="27dp"
                android:id="@+id/textView6" android:text="@string/user" android:textColor="#fff"
                android:textSize="20sp" android:fontFamily="@font/rubik"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/task_Num" android:text="@string/todayTask" android:textColor="#fff"
                android:textSize="13sp" android:fontFamily="@font/rubik"
                android:layout_alignStart="@+id/textView6"
                android:layout_below="@+id/textView6"/>
        <android.support.v7.widget.CardView
                app:cardPreventCornerOverlap="true"
                app:contentPadding="10dp"
                android:layout_width="match_parent"
                android:layout_height="82dp" android:layout_alignParentBottom="true"
                android:layout_marginBottom="16dp" android:layout_alignStart="@id/textView6"
                app:cardBackgroundColor="#80A6E7" app:cardCornerRadius="10dp" app:cardElevation="0dp">
            <ImageView
                    android:contentDescription="@string/app_name"
                    android:layout_gravity="end"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    app:srcCompat="@drawable/bell_left"
                    android:id="@+id/imageView3" android:layout_marginEnd="7dp" android:layout_marginTop="3dp"/>
            <TextView
                    android:text="@string/todayRemind"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView7"
                    android:textColor="#fff"
                    android:textSize="17sp"
                    android:fontFamily="@font/rubik" android:textStyle="bold" android:layout_marginTop="4dp"
                    android:layout_marginStart="5dp"/>
        </android.support.v7.widget.CardView>
        <ImageView
                android:contentDescription="@string/app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" app:srcCompat="@drawable/photo"
                android:id="@+id/imageView2" android:layout_alignParentEnd="true"
                android:layout_alignTop="@+id/textView6"/>
    </RelativeLayout>

    <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="18dp"
            android:clipToPadding="false"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/header1">
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:text="@string/today"
                    android:fontFamily="@font/rubik" android:textSize="17sp"
                    android:textColor="#565578" android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/todayText"/>

            <android.support.v7.widget.RecyclerView
                    android:layout_marginTop="10dp"
                    android:isScrollContainer="false"
                    android:id="@+id/today_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            <TextView
                    android:layout_marginTop="10dp"
                    android:text="@string/tomorrow"
                    android:fontFamily="@font/rubik" android:textSize="17sp"
                    android:textColor="#565578" android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tomorrowText"/>

            <android.support.v7.widget.RecyclerView
                    android:layout_marginTop="10dp"
                    android:isScrollContainer="false"
                    android:id="@+id/tomorrow_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</RelativeLayout>