<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent" xmlns:tools="http://schemas.android.com/tools"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:background="#F8FBFF"
                tools:context=".MainActivity">

    <RelativeLayout
            android:id="@+id/header3"
            android:background="@drawable/home_header"
            android:layout_width="match_parent"
            android:layout_height="90dp" android:layout_alignParentStart="true"
            android:layout_alignParentTop="true" android:paddingStart="20dp" android:paddingEnd="20dp"
            android:paddingTop="10dp">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView8" android:text="@string/user" android:textColor="#fff"
                android:textSize="20sp" android:fontFamily="@font/rubik" android:layout_alignParentBottom="true"
                android:layout_marginBottom="24dp"/>
        <ImageView
                android:contentDescription="@string/app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" app:srcCompat="@drawable/photo"
                android:id="@+id/imageView2" android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="15dp"/>
    </RelativeLayout>

    <TextView
            android:layout_marginTop="18dp"
            android:layout_marginStart="18dp"
            android:layout_below="@id/header3"
            android:text="@string/category"
            android:fontFamily="@font/rubik" android:textSize="17sp"
            android:textColor="#565578" android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/category"/>
    <android.support.v7.widget.GridLayout
            app:columnCount="2"
            app:rowCount="3"
            app:alignmentMode="alignMargins"
            app:columnOrderPreserved="false"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_below="@id/category"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true">
        <android.support.v7.widget.CardView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_margin="10dp"
                app:cardBackgroundColor="@color/colorWhite"
                app:cardCornerRadius="5dp">
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <ImageView
                        android:src="@drawable/clipboard"
                        android:contentDescription="@string/image_desc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                <TextView
                        android:text="@string/personal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_margin="10dp"
                app:cardBackgroundColor="@color/colorWhite"
                app:cardCornerRadius="5dp">
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <ImageView
                        android:src="@drawable/clipboard"
                        android:contentDescription="@string/image_desc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_margin="10dp"
                app:cardBackgroundColor="@color/colorWhite"
                app:cardCornerRadius="5dp">
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <ImageView
                        android:src="@drawable/clipboard"
                        android:contentDescription="@string/image_desc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_margin="10dp"
                app:cardBackgroundColor="@color/colorWhite"
                app:cardCornerRadius="5dp">
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <ImageView
                        android:src="@drawable/clipboard"
                        android:contentDescription="@string/image_desc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </android.support.v7.widget.GridLayout>

</RelativeLayout>